examples/test/testpolicy13795.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13795
  namespace: namespace149
spec:
  podSelector:
    matchLabels:
      key36: value9
      key49: value34
      key12: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value28
          key24: value16
          key9: value49
      podSelector:
        matchLabels:
          key26: value16
          key22: value10
          key39: value29
